Display list alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,44 @@
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #1a1a1c;
+  background-color: #131340;
   color: #fff;
+}
+
+.coin-app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1.5em 0 0 0 ;
+  color: #fff;
+}
+
+.coin-search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0em 0 1.5em 0;
+}
+
+.coin-text {
+  text-align: center;
+  margin: 0 0 0.6em 0;
+}
+
+.coin-input {
+  padding: 0 0 0 .5em;
+  width: 25em;
+  height: 3.5em;
+  border: none;
+  border-radius: 5px;
+  color: #e2e2e2;
+  /* background-image: linear-gradient(
+
+  ); */
+  background-color: blueviolet;
+}
+
+.coin-input::placeholder {
+  color: #e2e2e2;
 }
