--- a/src/Coin.css
+++ b/src/Coin.css
@@ -1,6 +1,7 @@
 .coin-container {
     display: flex;
     justify-content: center;
+    width: 95%;
 }
 
 .coin-row {
@@ -18,11 +19,12 @@
     align-items: center;
     padding: 0 2em 0 0;
     min-width: 2em;
+    justify-content: space-between;
 }
 
 .coin h1{
     font-size: 1.5em;
-    margin: 0 1em 0 0;
+    margin: 0 1em 0 0.5em;
 }
 
 .coin img {
@@ -33,18 +35,20 @@
 
 .coin-symbol {
     text-transform: uppercase;
-
+    /* padding: 0px 0 0 2em; */
+    margin: 0 1em 0 1em;
 }
 
 .coin-data {
     display: flex;
     text-align: center;
-    justify-content: center;
-    width: 65%;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
 }
 
 .coin-price {
-    width: 10em;
+    width: 7em;
 }
 
 .coin-volume {
